# sni-spoofing-rust

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
.github/workflows/: docker-image.yml  release.yml
data/: scan-snis.txt
docker/: Dockerfile
releases/: README.md  sni-spoof-rs-linux-amd64  sni-spoof-rs-linux-arm64  sni-spoof-rs-macos-amd64  sni-spoof-rs-macos-arm64
src/: config.rs  handler.rs  listener.rs  main.rs  relay.rs  scan.rs  shutdown.rs
src/packet/: tls.rs
src/sniffer/: mod.rs
